header,fooder, form testing

--- a/index.html
+++ b/index.html
@@ -4,10 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=s, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Simple website</title>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#"> Home </a></li>
+                <li><a href="#"> About </a></li>
+                <li><a href="#"> Service </a></li>
+                <li><a href="#"> Blog </a></li>
+
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <form action="#">
+            <h3>Sign Up</h3>
+            <label for="name">Name:
+                <input type="text" name="name" id="name">
+            </label>
+            <label for="email">Email:
+                <input type="email" name="email" id="email">
+            </label>
+            <label for="phone">Phone:
+                <input type="phone" name="phone" id="phone">
+            </label>
+            <label for="address">Address:
+                <input type="text" name="address" id="address">
+            </label>
+            <div id="genderdiv" for="gender">Gender:
+                <label for="gender">Male
+                    <input type="radio" name="gender" id="male">
+                </label>
+                <label for="gender">Female
+                    <input type="radio" name="gender" id="female">
+                </label>
+            </div>
+            
+        </form>
+
+        <br><br><br>
+
+        
+
+    </main>
+    <footer>
+        <p>&copy; 2024 Your Company. All Rights Reserved.</p>
+        <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+    </footer>
 
 </body>
 
