--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <label for="address">Address:
                 <input type="text" name="address" id="address">
             </label>
-            <div id="genderdiv" for="gender">Gender:
+            <div for="gender">Gender:
                 <label for="gender">Male
                     <input type="radio" name="gender" id="male">
                 </label>
@@ -48,7 +48,39 @@
 
         <br><br><br>
 
-        
+        <h3>Html table</h3>
+        <table>
+            <thead> 
+                <tr>
+                    <th>No</th>
+                    <th>Name</th>
+                    <th>Department</th>
+                    <th>Univarsity</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>fahim</td>
+                    <td>cse</td>
+                    <td>AIUB</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>ahmed</td>
+                    <td>eee</td>
+                    <td>nsu</td>
+                </tr>
+                
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">
+                        total: 2
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
 
     </main>
     <footer>
