--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=s, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/nav.css">
     <title>Simple website</title>
 </head>
 
@@ -12,10 +13,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#"> Home </a></li>
+                <li><a href="index.html"> Home </a></li>
                 <li><a href="#"> About </a></li>
                 <li><a href="#"> Service </a></li>
-                <li><a href="#"> Blog </a></li>
+                <li><a href="blog.html"> Blog </a></li>
 
             </ul>
         </nav>
